# raidory

./: .gitignore  Cargo.toml  start.bash
.cargo/: config.toml
assets/: index.html
src/: component.rs  event.rs  main.rs  monster.rs  player.rs
src/game_object/: battle.rs  camera.rs  command.rs  components.rs  game_object.rs  mod.rs  monster.rs  player.rs  projectile.rs  skill.rs  system.rs  tilemap.rs  tree.rs
src/resources/: resource.rs
src/save/: save.rs
src/states/: state.rs
src/ui/: ingame.rs  main_menu.rs  mod.rs  ui.rs
