[package]
name = "test_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12.1"
bevy_pkv = "0.9.0"
bevy_rapier2d = "0.23.0"
bevy_render = "0.12.1"
bevy_web_asset = "0.7.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8.5"
web-sys = "0.3.66"

